resources/css/exist.css
@charset "utf-8";
/* CSS Document */

@import url('bootstrap.min.css');
@import url('dropdowns.css');

@font-face {
    font-family: 'QuicksandBook';
    src: url('Quicksand_Book-webfont.eot');
    src: url('Quicksand_Book-webfont.eot?#iefix') format('embedded-opentype'),
         url('Quicksand_Book-webfont.woff') format('woff'),
         url('Quicksand_Book-webfont.ttf') format('truetype'),
         url('Quicksand_Book-webfont.svg#QuicksandBook') format('svg');
    font-weight: normal;
    font-style: normal;
}

/* ---------------------------------------- LAYOUT ---------------------------------------- */

body { color: #222; background: url(../images/body.gif) repeat 50% 100%; }

#grey-top { background: #F3F3F3 url(../images/horizontal.gif) repeat-x 50% 0; float: left; width: 100%; height: 100%; }
#grey-bot { background: url(../images/body-base.gif) repeat-x 50% 100%; float: left; width: 100%; height: 100%; }

#container { width: 940px; margin: 0 auto 30px auto; }

#header { width: 940px; float: left; background: url(../images/header.gif) no-repeat; height: 120px; }

#header a#logo { display: block; width: 220px; height: 100px; outline: 0; text-indent: -999em; overflow: hidden; float: left; margin: 10px 0; }

#navigation {
    float: left; 
    height: 70px; 
    width: 940px;
    color: white;
    margin-left: -10px;
}

#navigation .btn-group { 
    float: left;
    margin: 8px 0 8px 20px;
    vertical-align: middle;
}

#navigation h2 {
    float: left;
    margin: auto 0;
    font: 2.5em/1em "QuicksandBook", "Arial", Helvetica, sans-serif;
    font-weight: bold;
    color: #FFF;
}

#navigation h2 a {
    color: #FFF;
}

#navigation .actions {
    float: right;
    margin: 8px 0 8px 0;
}

#main { }

/* ---------------------------------------- INDEX ---------------------------------------- */


#content { 
    min-height: 600px;
}

.box {
    margin: 0 0 20px 0;
    padding : 10px 20px;
    background: #3B3B3C;
    border-radius: 10px 10px 10px 10px;
    -moz-border-radius: 10px 10px 10px 10px;
    -webkit-border-radius: 10px 10px 10px 10px;
    color: white;
}

#main ul#twitter { margin: 10px auto; padding: 0; color: #FFF; }
#main ul#twitter li { list-style-type: none; background: #0083CB url(../images/twitter-right.gif) no-repeat 50% 100%; padding: 4px 5px 18px; line-height: 15px; margin: 1px auto; }
#main ul#twitter li.alt { background: #0083CB url(../images/twitter-left.gif) no-repeat 50% 100%; }
#main ul#twitter a:link, #main ul#twitter a:visited { color: #FFF; }

#sourceforge { background: url(../images/sourceforge.gif) no-repeat 50%; width: 130px; height: 30px; display: block; margin: 30px auto; text-indent: -999em; overflow: hidden; }

#footer { clear: both; width: 960px; margin: 0 auto; height: 50px; font-size: 85%; }

#footer ul { float: left; width: 640px; margin: 0 0 0 -4px; }
#footer ul li { display: inline; }
#footer ul li a { padding: 2px 4px; color: #ffcb05; }
#footer ul li a:hover { background: #333; }

#copyright { float: right; width: 220px; }
#copyright p { padding: 0; color: #F3F3F3; }

#sidebar, #content {
    margin-top: 10px;
}

.search-query {
    width: 100%;
}

/* ---------------------------------------- TYPE ---------------------------------------- */

h1 { font-size: 1.5em; padding: 0px 0 5px; margin: 0; font-weight: bold; "QuicksandBook", "Arial", Helvetica, sans-serif; }
h2 { font-size: 1.2em; padding: 10px 0; font-weight: bold; font-family: "QuicksandBook", "Arial", Helvetica, sans-serif; letter-spacing: 1px; }
h3 { font-size: 1.2em; padding: 10px 0 5px; margin: 0 0 5px; font-weight: bold; }
h4 { font-size: 1.1em; padding: 10px 0; font-weight: bold; }
h5 { font-size: 1.0em; padding: 10px 0; font-weight: bold; }

a { color: #0083cb; text-decoration: none;  }
a:hover { color: #ffcb05; }

.clear { clear: both; }
.imgborder { border: 1px solid #CCC; padding: 3px; margin: 3px; }



/* ---------------------------------------- SUB PAGE ---------------------------------------- */


#sub-right { float: right; width: 240px; }

#content h2 { color: #0083cb; padding: 10px 0 5px; }

blockquote { padding: 10px 15px 0 15px; border: 1px solid #abe1ff; background: #FFF; margin: 5px 0 10px; }
blockquote h3 { padding: 0; border: 0; margin: 0; font-size: 12px; color: #0083cb }
blockquote p { padding: 0 0 10px; }

.code { 
    font: 14px/20px "Ubuntu Mono", Menlo, Consolas, "Courier New", Courier, monospace;
    background: #444444 url(../images/noise.png);
    padding: 8.5px;
    width: 100%;
    margin: 18px 0 18px;
}

figure {
}

figure img {
    display: block;
}

figcaption {
    font-size: .85em;
    text-align: center;
}

/* ---------------------------------------- Local styles ----------------------------------- */
form { margin: 20px 0; }

.inputrow {
    margin-top: 8px;
}

.inputrow label {
    width: 120px;
    display: block;
    float: left;
}

.error {
    font-family: "Ubuntu Mono", "Consolas", "Courier New", Courier, monospace;
    font-size: 112%;
    white-space: pre-wrap;
    width: 100%;
    overflow: auto;
}

.item { 
    background: #FFFFFF;
    margin: 8px 0;
    padding: 8px 8px; 
    border: 2px solid #FFAD00;
    border-radius: 15px;
    moz-border-radius: 15px;
}
.itemhead { background: #E0E0E0; padding-left: 8px; }
.hi { background: #FFED3D; }

/* ------------------------------------ From Wiki styles ---------------------------------- */

.entry {
    margin: 0 0 1.5em 0;
    line-height: 1.6em;
}

.entry .entryhead {
    /* height: 120px; */
    margin: 0 0 1em 0;
}

.entry .entrytitle {
    font-size: 38px;
    font-weight: normal;
    font-family: "QuicksandBook", Arial, Helvetica, sans-serif;
    font-variant: normal;
    letter-spacing: -1px;
    margin: 0 0 4px 0;
    line-height: 1.2em;
}

.box .entrytitle a:link {
    font-weight: normal;
    color: #FFF;
}

.entry .author-date {
    color: #777;
}

.entry .date {
    float: left;
    width: 80px;
    margin: 4px 10px 0 0;
    padding: 4px 3px;
    background-color: #E8E8FF;
}

.entry .day {
    font-size: 150%;
    display: block;
    text-align: center;
}

.entry .month {
    display: block;
    text-align: center;
}

.entry .year {
    display: block;
    text-align: center;
}

#content .content, #content .content p, #content .content li, #content .content dt {
    font: 16px/24px Georgia, "Times New Roman", Times, serif;
    color: #555;
}

.content h1 {
    font-family: "QuicksandBook", "Arial", Helvetica, sans-serif;
    font-size: 1.75em;
    font-weight: bold;
    margin: .8em 0 0 0;
}

.content h2 {
    font-family: "QuicksandBook", "Arial", Helvetica, sans-serif;
    font-size: 1.33em;
    font-weight: bold;
    margin: .3em 0 0;
}

.content h3 {
    font-size: 1em;
    font-weight: bold;
}

.content table {
    margin: .5em 1em;
}

.content td, .entry th {
    padding: 6px 4px;
}

.content p {
}

.content .strong {
    font-weight: bold;
}

.content em {
    font-style: italic;
}

.content code {
    font-size: .92em;
    background-color: transparent;
    border: 0;
    color: inherit;
}

.content blockquote {
    margin: .5em 2em;
    font-style: italic;
    text-align: justify;
}

.content ul, .content ol {
    margin: 0 1.5em;
}

.content ul li {
    list-style: disc;
    margin-bottom: .4em;
}

.content ol li {
    list-style: decimal;
    margin-bottom: .4em;
}

#content .content dt {
    font-weight: bold;
}

.content img {
    margin: 8px 0;
    max-width: 100%
}

.content .img-float-left {
    float: left;
    margin-right: 10px;
}

.content .img-float-right {
    float: right;
    width: inherit;
    margin-left: 10px;
}

.content pre.prettyprint {
    padding: 10px 16px;
    margin-bottom: .85em;
}

.content .guimenuitem {
    background: #FEF8C4;
}

.content .example {
    margin: .25em 0 .25em 1em;
}

/* --------------------------------------- Latest posts box ------------------------------------ */
#latest-posts ul {
    margin: .5em 0;
}

#latest-posts li {
    list-style: none;
}

#latest-posts .date {
    margin: .5em 0 .25em 0;
    border-bottom: 1px solid white;
}

.box .markup-help ul {
    margin-left: 0;
}
.box .markup-help li {
    list-style: none;
}

.example {
    padding: 10px 10px;
    border: 1px solid #707070;
}

.result {
    font-family: "Ubuntu Mono", "Consolas", monospace;
    font-size: 112%;
    white-space: pre-wrap;
    width: 100%;
    overflow: auto;
}

.hidden {
    display: none;
}

